--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 bevy = { version = "0.14", features = ["dynamic_linking", "wav"] }
 rand = "0.8"
+bytemuck = { version = "1.12", features = ["derive"] }
+
 
 [profile.dev]
 opt-level = 1
