--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { version = "0.14", features = ["dynamic_linking", "wav"] }
+bevy = { version = "0.14", features = ["dynamic_linking", "wav", "tga"] }
 rand = "0.8"
 bytemuck = { version = "1.12", features = ["derive"] }
 
