Add GPU particle effects to explosions using Bevy Hanabi
Integrate bevy_hanabi 0.12 to enhance explosion visuals with dynamic particle systems:
- Debris particles with gravity and air drag (orange/gray chunks)
- Fast-moving spark particles (bright yellow-white streaks)
- Rising smoke plumes that expand over time
- Automatic spawning for both tower and unit explosions
- Scaled appropriately (4x for towers, 0.3x for units)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.14", features = ["dynamic_linking", "wav", "tga"] }
+bevy_hanabi = "0.12"
 rand = "0.8"
 bytemuck = { version = "1.12", features = ["derive"] }
 
