--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ bevy = { version = "0.15", features = ["dynamic_linking", "wav", "tga"] }
 bevy_hanabi = "0.14"
 rand = "0.8"
 bytemuck = { version = "1.12", features = ["derive"] }
+noise = "0.9"
 
 
 [profile.dev]
@@ -15,6 +16,12 @@ opt-level = 1
 
 [profile.dev.package."*"]
 opt-level = 3
+
+[profile.opt-dev]
+inherits = "release"
+opt-level = 3
+lto = false
+codegen-units = 16
 
 [profile.release]
 lto = true
