--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.tga filter=lfs diff=lfs merge=lfs -text
 *.wav filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.ktx2 filter=lfs diff=lfs merge=lfs -text
